--- a/web-config/nginx/conf.d/newutil.conf
+++ b/web-config/nginx/conf.d/newutil.conf
@@ -23,9 +23,8 @@ server {
 
     location /socket.io {
         proxy_http_version 1.1;
-        proxy_buffering off;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "Upgrade";
+        include nginxconfig.io/proxy.conf;
+        proxy_set_header Host $host;
         proxy_pass http://web:8080/socket.io;
     }
 }
