--- a/web-config/nginx/nginx.conf
+++ b/web-config/nginx/nginx.conf
@@ -32,7 +32,7 @@ http {
     ssl_session_tickets    off;
 
     # Diffie-Hellman parameter for DHE ciphersuites
-    ssl_dhparam            /etc/nginx/dhparam-2048.pem;
+    ssl_dhparam            /etc/ssl/certs/dhparam-2048.pem;
 
     # Mozilla Intermediate configuration
     ssl_protocols          TLSv1.2 TLSv1.3;
