nginx changes here and there

--- a/web-config/nginx/nginx.conf
+++ b/web-config/nginx/nginx.conf
@@ -27,8 +27,6 @@ http {
     error_log              /dev/null;
 
     # SSL
-    ssl_session_timeout    1d;
-    ssl_session_cache      shared:SSL:10m;
     ssl_session_tickets    off;
 
     # Diffie-Hellman parameter for DHE ciphersuites
@@ -36,13 +34,14 @@ http {
 
     # Mozilla Intermediate configuration
     ssl_protocols          TLSv1.2 TLSv1.3;
-    ssl_ciphers            ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384;
+    ssl_ciphers ECDH+AESGCM:ECDH+AES256:ECDH+AES128:DH+3DES:!ADH:!AECDH:!MD5;
+    ssl_ecdh_curve secp384r1;
 
     # OCSP Stapling
     ssl_stapling           on;
     ssl_stapling_verify    on;
-    resolver               1.1.1.1 1.0.0.1 8.8.8.8 8.8.4.4 208.67.222.222 208.67.220.220 valid=60s;
-    resolver_timeout       2s;
+    resolver               8.8.8.8;
+    ssl_buffer_size 8k;
 
     # Connection header for WebSocket reverse proxy
     map $http_upgrade $connection_upgrade {
