--- a/web-config/nginx/conf.d/newutil.conf
+++ b/web-config/nginx/conf.d/newutil.conf
@@ -1,7 +1,7 @@
 server {
     listen 80;
     listen [::]:80;
-    server_name www.newutil.rawcsav.com newutil.rawcsav.com; # Include IP address
+    server_name www.newutil.rawcsav.com newutil.rawcsav.com; # Include IPh address
 
     if ($http_x_forwarded_proto = "http") {
         return 301 https://$host$request_uri;
@@ -20,6 +20,12 @@ server {
 
     }
 
+    location / {
+        if ($remote_addr = 172.20.0.2) {
+            proxy_pass http://172.20.0.2:8080;
+            break;
+        }
+    }
 
     location /socket.io {
         proxy_http_version 1.1;
