--- a/web-config/nginx/nginx.conf
+++ b/web-config/nginx/nginx.conf
@@ -43,6 +43,8 @@ http {
     resolver               8.8.8.8;
     ssl_buffer_size 8k;
 
+
+    server_tokens off;
     # Connection header for WebSocket reverse proxy
     map $http_upgrade $connection_upgrade {
         default upgrade;
