--- a/web-config/nginx/conf.d/newutil.conf
+++ b/web-config/nginx/conf.d/newutil.conf
@@ -12,21 +12,14 @@ server {
     location /static/ {
         alias /newutil/app/static/;
     }
-
-    location / {
-        proxy_pass http://web:8080;
-        proxy_set_header Host $host;
-        include nginxconfig.io/proxy.conf;
-
-    }
-
-    location / {
-        if ($remote_addr = 10.66.66.2) {
-            proxy_pass http://10.66.66.2:8080;
-            break;
+    location /admin {
+            proxy_pass http://web:8080;
+            include nginxconfig.io/proxy.conf;
+                if ($remote_addr = "10.66.66.2") {
+                proxy_pass http://10.66.66.2:8080;
+            }
         }
     }
-
     location /socket.io {
         proxy_http_version 1.1;
         include nginxconfig.io/proxy.conf;
