--- a/web-config/nginx/conf.d/newutil.conf
+++ b/web-config/nginx/conf.d/newutil.conf
@@ -16,8 +16,8 @@ server {
     location /admin {
             proxy_pass http://web:8080;
             include nginxconfig.io/proxy.conf;
-                if ($remote_addr = "10.66.66.2") {
-                proxy_pass http://10.66.66.2:8080;
+                if ($remote_addr = "10.100.0.1") {
+                proxy_pass http://10.100.0.1:8080/admin;
             }
         }
 
