--- a/web-config/nginx/conf.d/newutil.conf
+++ b/web-config/nginx/conf.d/newutil.conf
@@ -17,7 +17,7 @@ server {
             proxy_pass http://web:8080;
             include nginxconfig.io/proxy.conf;
                 if ($remote_addr = "10.100.0.1") {
-                proxy_pass http://10.100.0.1:8080/admin;
+                proxy_pass http://10.100.0.1:8080;
             }
         }
 
