--- a/docker-compose.mon.yml
+++ b/docker-compose.mon.yml
@@ -1,15 +1,29 @@
 version: '3'
 services:
+  grafana:
+    image: grafana/grafana
+    environment:
+      - GF_SECURITY_ADMIN_USER=${GF_USER}
+      - GF_SECURITY_ADMIN_PASSWORD=${GF_PASS}
+    volumes:
+      - grafana_data:/var/lib/grafana
+    restart: unless-stopped
+    networks:
+      - appnet
+
   prometheus:
     image: prom/prometheus
     volumes:
-      - ./prometheus.yml:/etc/prometheus/prometheus.yml
-    ports:
-      - 9090:9090
+      - prometheus_data:/prometheus
+    command:
+      - --web.enable-admin-api
+      - --web.enable-lifecycle
+      - --config.file=/etc/prometheus/prometheus.yml
+    restart: unless-stopped
+    networks:
+      - appnet
 
-  grafana:
-    image: grafana/grafana
-    ports:
-      - 3000:3000
-    depends_on:
-      - prometheus
+
+networks:
+  appnet:
+    external: true
