--- a/web-config/nginx/conf.d/monitor.conf
+++ b/web-config/nginx/conf.d/monitor.conf
@@ -4,6 +4,8 @@ server {
     server_name www.monitor.rawcsav.com monitor.rawcsav.com;
 
     location / {
+        auth_basic "Grafana Authentication";
+        auth_basic_user_file /etc/nginx/.htpasswd;
         proxy_pass http://grafana:3000/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
@@ -11,6 +13,8 @@ server {
     }
 
     location /prometheus/ {
+        auth_basic "Prometheus Authentication";
+        auth_basic_user_file /etc/nginx/.htpasswd;
         proxy_pass http://prometheus:9090/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
