--- a/web-config/nginx/conf.d/monitor.conf
+++ b/web-config/nginx/conf.d/monitor.conf
@@ -1,12 +1,19 @@
+upstream grafana {
+    server grafana:3000;
+}
+
+upstream prometheus {
+    server prometheus:9090;
+}
+
 server {
     listen 8090;
-    listen [::]:8090;
     server_name www.monitor.rawcsav.com monitor.rawcsav.com;
 
     location / {
         auth_basic "Grafana Authentication";
         auth_basic_user_file /etc/nginx/.htpasswd;
-        proxy_pass http://grafana:3000/;
+        proxy_pass http://grafana;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-Proto $scheme;
@@ -15,7 +22,7 @@ server {
     location /prometheus/ {
         auth_basic "Prometheus Authentication";
         auth_basic_user_file /etc/nginx/.htpasswd;
-        proxy_pass http://prometheus:9090/;
+        proxy_pass http://prometheus;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-Proto $scheme;
