--- a/web-config/nginx/conf.d/monitor.conf
+++ b/web-config/nginx/conf.d/monitor.conf
@@ -8,6 +8,7 @@ upstream prometheus {
 
 server {
     listen 8090;
+    listen [::]:8090;
     server_name www.monitor.rawcsav.com monitor.rawcsav.com;
 
     location / {
