fixed 80 redirect on newutil

--- a/web-config/nginx/conf.d/newutil.conf
+++ b/web-config/nginx/conf.d/newutil.conf
@@ -20,6 +20,14 @@ server {
         proxy_set_header Host $host;
         proxy_pass http://web:8080/socket.io;
     }
+
+
+    location / {
+        proxy_pass http://web:8080;
+        proxy_set_header Host $host;
+        include nginxconfig.io/proxy.conf;
+
+    }
 }
 
 server {
