--- a/monitor/docker-compose.yml
+++ b/monitor/docker-compose.yml
@@ -14,3 +14,12 @@ services:
       timeout: 10s
       retries: 3
       start_period: 40s
+    networks:
+        - appnet
+
+
+networks:
+    internal:
+      driver: "bridge"
+    appnet:
+      external: true
