--- a/web-config/nginx/conf.d/monitor.conf
+++ b/web-config/nginx/conf.d/monitor.conf
@@ -13,7 +13,7 @@ server {
         proxy_pass http://dashy:80;
         proxy_set_header Host $host;
         include nginxconfig.io/proxy.conf;
-
+        add_header Access-Control-Allow-Origin *;
     }
 }
 
@@ -41,7 +41,7 @@ server {
         proxy_pass http://dashy:80;
         proxy_set_header   Host      $host;
         include nginxconfig.io/proxy.conf;
+        add_header Access-Control-Allow-Origin *;
     }
-
     include nginxconfig.io/general.conf;
 }
