--- a/web-config/nginx/conf.d/monitor.conf
+++ b/web-config/nginx/conf.d/monitor.conf
@@ -10,10 +10,9 @@ server {
     client_max_body_size 50M;
 
     location / {
-        proxy_pass http://dashy:8080;
+        proxy_pass http://homepage:3000;
         proxy_set_header Host $host;
         include nginxconfig.io/proxy.conf;
-        add_header Access-Control-Allow-Origin *;
     }
 }
 
@@ -23,6 +22,8 @@ server {
     server_name www.monitor.rawcsav.com monitor.rawcsav.com; # Include IP address
 
 
+    auth_basic "Restricted";
+    auth_basic_user_file /etc/nginx/auth/.htpasswd;
 
     ssl_certificate /etc/ssl/certs/cert.pem;
     ssl_certificate_key /etc/ssl/certs/privkey.pem;
@@ -38,10 +39,9 @@ server {
 
 
     location / {
-        proxy_pass http://dashy:8080;
+        proxy_pass http://homepage:3000;
         proxy_set_header   Host      $host;
         include nginxconfig.io/proxy.conf;
-        add_header Access-Control-Allow-Origin *;
     }
     include nginxconfig.io/general.conf;
 }
