--- a/monitor/docker-compose.yml
+++ b/monitor/docker-compose.yml
@@ -4,12 +4,18 @@ services:
     image: ghcr.io/gethomepage/homepage:latest
     container_name: homepage
     volumes:
-      - ../web-config/monitor:/app/config # Make sure your local config directory exists
+      - ./config:/app/config # Make sure your local config directory exists
       - /var/run/docker.sock:/var/run/docker.sock # (optional) For docker integrations
+      - ./images:/app/public/images
     networks:
         - appnet
-
-
+        -
+  prometheus:
+    image: prom/prometheus
+    volumes:
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml
+    networks:
+      - appnet
 networks:
     internal:
       driver: "bridge"
