--- a/monitor/config/settings.yml
+++ b/monitor/config/settings.yml
@@ -1,3 +1,8 @@
 title: RAWCSAV Monitoring
 favicon: images/favicon.ico
 fiveColumns: true
+
+
+widget:
+  type: prometheus
+  url: http://prometheus:9090
