--- a/web-config/nginx/conf.d/monitor.conf
+++ b/web-config/nginx/conf.d/monitor.conf
@@ -11,7 +11,13 @@ server {
     client_max_body_size 50M;
 
     location / {
-        proxy_pass http://homepage:3000;
+        proxy_pass http://dashy:8080;
+        proxy_set_header Host $host;
+        include nginxconfig.io/proxy.conf;
+    }
+
+    location /grafana {
+        proxy_pass http://grafana:3000;
         proxy_set_header Host $host;
         include nginxconfig.io/proxy.conf;
     }
@@ -25,7 +31,6 @@ server {
     auth_basic "Restricted";
     auth_basic_user_file /etc/nginx/auth/.htpasswd;
 
-
     ssl_certificate /etc/ssl/certs/cert.pem;
     ssl_certificate_key /etc/ssl/certs/privkey.pem;
     ssl_client_certificate /etc/ssl/certs/origin_pull.pem;
@@ -38,11 +43,17 @@ server {
     access_log /var/log/nginx/access.log combined buffer=512k flush=1m;
     error_log /var/log/nginx/error.log warn;
 
-
     location / {
-        proxy_pass http://homepage:3000;
-        proxy_set_header   Host      $host;
+        proxy_pass http://dashy:8080;
+        proxy_set_header Host $host;
         include nginxconfig.io/proxy.conf;
     }
+
+    location /grafana {
+        proxy_pass http://grafana:3000;
+        proxy_set_header Host $host;
+        include nginxconfig.io/proxy.conf;
+    }
+
     include nginxconfig.io/general.conf;
 }
