corrected dashy config path

--- a/monitor/docker-compose.yml
+++ b/monitor/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     container_name: Dashy
     # Pass in your config file below, by specifying the path on your host machine
     volumes:
-      - /root/my-config.yml:/app/user-data/conf.yml
+      - config/my-config.yml:/app/user-data/conf.yml
     environment:
       - NODE_ENV=production
     restart: unless-stopped
