corrected dashy config path

--- a/monitor/docker-compose.yml
+++ b/monitor/docker-compose.yml
@@ -36,6 +36,7 @@ services:
       - grafana-data:/var/lib/grafana
     networks:
       - internal
+      - appnet
     restart: unless-stopped
 
 volumes:
