removed monitor, nginx changes

--- a/web-config/nginx/nginx.conf
+++ b/web-config/nginx/nginx.conf
@@ -31,6 +31,7 @@ http {
 
     # Diffie-Hellman parameter for DHE ciphersuites
     ssl_dhparam            /etc/ssl/certs/dhparam-2048.pem;
+    ssl_trusted_certificate /etc/ssl/certs/cloudflare_origin_ca.pem;
 
     # Mozilla Intermediate configuration
     ssl_protocols          TLSv1.2 TLSv1.3;
