--- a/web-config/nginx/nginxconfig.io/general.conf
+++ b/web-config/nginx/nginxconfig.io/general.conf
@@ -1,11 +1,9 @@
-# favicon.ico
-location = /favicon.ico {
+# favicon.ico and robots.txt
+location ~* ^/(favicon.ico|robots.txt)$ {
     log_not_found off;
-}
-
-# robots.txt
-location = /robots.txt {
-    log_not_found off;
+    access_log off;
+    expires max;
+    add_header Cache-Control "public, must-revalidate, proxy-revalidate";
 }
 
 # gzip
@@ -13,4 +11,8 @@ gzip            on;
 gzip_vary       on;
 gzip_proxied    any;
 gzip_comp_level 6;
+gzip_min_length 256;
+gzip_buffers    16 8k;
+gzip_http_version 1.1;
 gzip_types      text/plain text/css text/xml application/json application/javascript application/rss+xml application/atom+xml image/svg+xml;
+gzip_disable    "msie6";
