--- a/web-config/nginx/nginxconfig.io/proxy.conf
+++ b/web-config/nginx/nginxconfig.io/proxy.conf
@@ -1,6 +1,3 @@
-
-
-# Inside the location block where proxying is configured
 proxy_set_header Host $host;
 proxy_set_header Upgrade $http_upgrade;
 proxy_set_header Connection $connection_upgrade;
@@ -13,8 +10,16 @@ proxy_set_header X-Real-IP $remote_addr;
 proxy_set_header Forwarded $proxy_add_forwarded;
 proxy_set_header X-Forwarded-Host $host;
 proxy_set_header X-Forwarded-Port $server_port;
+proxy_pass_request_headers on;
 
+# Hide sensitive headers
+proxy_hide_header X-Powered-By;
+proxy_hide_header Server;
 # Proxy timeouts
 proxy_connect_timeout 60s;
 proxy_send_timeout 60s;
 proxy_read_timeout 60s;
+
+# Proxy buffering
+proxy_buffers 8 16k;
+proxy_buffer_size 32k;
