chore: update TLS configurations across configs
- Remove security comment from `rawcon.conf`
- Remove TLSv1.2 and TLSv1.3 protocols from `nginx.conf`
- Add TLSv1.2 and TLSv1.3 protocols to `security.conf`

--- a/web-config/nginx/nginxconfig.io/security.conf
+++ b/web-config/nginx/nginxconfig.io/security.conf
@@ -1,4 +1,5 @@
 # security headers
+ssl_protocols          TLSv1.2 TLSv1.3;
 add_header X-XSS-Protection          "1; mode=block" always;
 add_header X-Content-Type-Options    "nosniff" always;
 add_header Referrer-Policy           "no-referrer-when-downgrade" always;
