--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,11 +13,10 @@ services:
     command: "/bin/sh -c 'while :; do sleep 6h & wait $${!}; nginx -s reload; done & nginx -g \"daemon off;\"'"
 
   cloudflared:
-    dns:
-      - 100.94.221.96
-    dns_search:
-      - opah-banana.ts.net
     image: cloudflare/cloudflared:latest
+    dns:
+      - 100.94.221.96 # Google's DNS as backup
+      - 1.1.1.1  # Cloudflare's DNS
     command: tunnel --no-autoupdate run ${CLOUDFLARED_TUNNEL_ID}
     volumes:
       - ./web-config/cloudflared:/etc/cloudflared
